fix: Change bug when snow overflow window

--- a/frontend/src/app/shared/components/snow/snow.component.scss
+++ b/frontend/src/app/shared/components/snow/snow.component.scss
@@ -16,8 +16,8 @@
   z-index: 9;
 
   @for $i from 1 through $total {
-    $random-x: random(1000000) * 0.0001vw;
-    $random-offset: random_range(-100000, 100000) * 0.0001vw;
+    $random-x: random(1000000) * 0.000093vw;
+    $random-offset: random_range(-100000, 100000) * 0.000095vw;
     $random-x-end: $random-x + $random-offset;
     $random-x-end-yoyo: $random-x + ($random-offset / 2);
     $random-yoyo-time: random_range(30000, 80000) / 100000;
@@ -38,7 +38,7 @@
       }
 
       to {
-        transform: translate($random-x-end-yoyo, 100vh) scale($random-scale);
+        transform: translate($random-x-end-yoyo, 92vh) scale($random-scale);
       }
     }
   }
